声でボタンを押すテストコードができたよ

--- a/OTO-RPG/Assembly-CSharp.csproj
+++ b/OTO-RPG/Assembly-CSharp.csproj
@@ -41,12 +41,14 @@
      <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\SimpleScript.cs" />
      <Compile Include="Assets\01.Script\FFT_Analyze.cs" />
      <Compile Include="Assets\01.Script\Animation_Controll.cs" />
+     <Compile Include="Assets\Examples\FIXED_Script\PitchVisualizer1.cs" />
      <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\Benchmark01_UGUI.cs" />
      <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\TMP_TextSelector_A.cs" />
      <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\VertexShakeA.cs" />
      <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\Benchmark04.cs" />
      <Compile Include="Assets\01.Script\Slider_Controll.cs" />
      <Compile Include="Assets\Examples\AudioRecorder.cs" />
+     <Compile Include="Assets\Examples\FIXED_Script\AudioRecorder1.cs" />
      <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\ChatController.cs" />
      <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\TextMeshProFloatingText.cs" />
      <Compile Include="Assets\01.Script\Chord_check.cs" />
