--- a/OTO-RPG/Assembly-CSharp.csproj
+++ b/OTO-RPG/Assembly-CSharp.csproj
@@ -86,6 +86,7 @@
      <Compile Include="Assets\Examples\PitchVisualizer.cs" />
      <Compile Include="Assets\01.Script\Reset_Button.cs" />
      <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\Benchmark01.cs" />
+     <Compile Include="Assets\01.Script\Test\Test01.cs" />
      <None Include="Assets\TextMesh Pro\Shaders\TMPro.cginc" />
      <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF-Mobile Overlay.shader" />
      <None Include="Assets\TextMesh Pro\Shaders\TMP_Bitmap.shader" />
