--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,7 @@ OTO-RPG/Library/PlayerDataCache/Win64/Data/sharedassets0.assets.resS
 *.resS
 OTO-RPG/Library/PlayerDataCache/Win64/Data/sharedassets0.assets.resS
 OTO-RPG/Library/PlayerDataCache/Win64/Data/sharedassets0.assets.resS
+OTO-RPG/Library/PlayerDataCache/Win64/Data/sharedassets0.assets.resS
+OTO-RPG/Library/PlayerDataCache/Win64/Data/sharedassets0.assets.resS
+OTO-RPG/Library/PlayerDataCache/Win64/Data/sharedassets0.assets.resS
+*.resS
