--- a/OTO-RPG/Assembly-CSharp.csproj
+++ b/OTO-RPG/Assembly-CSharp.csproj
@@ -753,8 +753,8 @@
     <Reference Include="Unity.2D.Tilemap.Extras">
         <HintPath>D:\0.ゼミ\01.卒研\オリジナルゲーム\音と色のやつ\OTO-RPG\OTO-RPG\Library\ScriptAssemblies\Unity.2D.Tilemap.Extras.dll</HintPath>
     </Reference>
-    <Reference Include="Unity.2D.Animation.Editor">
-        <HintPath>D:\0.ゼミ\01.卒研\オリジナルゲーム\音と色のやつ\OTO-RPG\OTO-RPG\Library\ScriptAssemblies\Unity.2D.Animation.Editor.dll</HintPath>
+    <Reference Include="Unity.Recorder.Editor">
+        <HintPath>D:\0.ゼミ\01.卒研\オリジナルゲーム\音と色のやつ\OTO-RPG\OTO-RPG\Library\ScriptAssemblies\Unity.Recorder.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.InternalAPIEngineBridge.001">
         <HintPath>D:\0.ゼミ\01.卒研\オリジナルゲーム\音と色のやつ\OTO-RPG\OTO-RPG\Library\ScriptAssemblies\Unity.InternalAPIEngineBridge.001.dll</HintPath>
@@ -764,6 +764,12 @@
     </Reference>
     <Reference Include="Unity.2D.PixelPerfect">
         <HintPath>D:\0.ゼミ\01.卒研\オリジナルゲーム\音と色のやつ\OTO-RPG\OTO-RPG\Library\ScriptAssemblies\Unity.2D.PixelPerfect.dll</HintPath>
+    </Reference>
+    <Reference Include="Unity.Recorder.Base">
+        <HintPath>D:\0.ゼミ\01.卒研\オリジナルゲーム\音と色のやつ\OTO-RPG\OTO-RPG\Library\ScriptAssemblies\Unity.Recorder.Base.dll</HintPath>
+    </Reference>
+    <Reference Include="Unity.2D.Animation.Editor">
+        <HintPath>D:\0.ゼミ\01.卒研\オリジナルゲーム\音と色のやつ\OTO-RPG\OTO-RPG\Library\ScriptAssemblies\Unity.2D.Animation.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.2D.Tilemap.Editor">
         <HintPath>D:\0.ゼミ\01.卒研\オリジナルゲーム\音と色のやつ\OTO-RPG\OTO-RPG\Library\ScriptAssemblies\Unity.2D.Tilemap.Editor.dll</HintPath>
@@ -878,6 +884,9 @@
     </Reference>
     <Reference Include="Unity.VisualScripting.State">
         <HintPath>D:\0.ゼミ\01.卒研\オリジナルゲーム\音と色のやつ\OTO-RPG\OTO-RPG\Library\ScriptAssemblies\Unity.VisualScripting.State.dll</HintPath>
+    </Reference>
+    <Reference Include="Unity.Recorder">
+        <HintPath>D:\0.ゼミ\01.卒研\オリジナルゲーム\音と色のやつ\OTO-RPG\OTO-RPG\Library\ScriptAssemblies\Unity.Recorder.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
